# framework-design

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
communication-mechanism-design/: index.html
docs/en/: index.md
docs/en/communication-mechanism-design/: index.md
docs/en/entity-component-system/: components-management.md  implementation-architecture-choices.md  implementation-architecture-overview.md  implementation-architecture.md  index.md  logical-abstraction.md  runtime-component-injection.md
docs/en/general-design/: design-philosophy.md  entity-component-system.md  index.md
entity-component-system/: index.html
entity-component-system/components-management/: index.html
entity-component-system/implementation-architecture/: index.html
entity-component-system/implementation-architecture-choices/: index.html
entity-component-system/logical-abstraction/: index.html
entity-component-system/runtime-component-injection/: index.html
general-design/: index.html
general-design/design-philosophy/: index.html
general-design/entity-component-system/: index.html
search/: search_index.json
village_showcase/: init_system.py  message_queue.py  mq_operations.py  setup.py  task.py  utils.py  village.crd.yaml  village.py  villager.crd.yaml  villager.py  villager_controller.py
