[tool.poetry]
name = "lithops-design-docs"
version = "0.1.0"
description = ""
authors = ["Trent Fellbootman <78004741+Trent-Fellbootman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
pymdown-extensions = "^10.14.3"
mkdocs-material = "^9.6.5"
mkdocs-static-i18n = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
